integration_tests/codegen_fail/fail/object/derive_incompatible_input_object.rs.disabled
// FIXME: enable this if interfaces are supported
#[derive(juniper::GraphQLInputObject)]
struct ObjectA {
    test: String,
}

#[derive(juniper::GraphQLObject)]
struct Object {
    field: ObjectA,
}

fn main() {}
